# combinators

./: .gitignore  .gitmodules  DEVELOP.org  LICENSE  Makefile  NOTES.org  README.md  README.org  TODO.org  bouncing_ball.ipynb  bouncing_ball.py  bouncing_ball_data.py  bouncing_ball_plots.py  cli.py  combinators.py  default.nix  dynamical_ball.ipynb  dynamical_ball.py  environment.yml  filtering.py  flake.nix  foldable.py  gmm.py  graphs.py  hmm.py  hmm_filtering.ipynb  hmm_smc.ipynb  importance.py  mcmc.py  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  shell.nix  smc.ipynb  smc.py  ssm.py  ssm_smc.ipynb  trace_tries.py  traces.py  (+1 more)
.github/workflows/: test.yml
combinators/: __init__.py  cache.py  combinators.py  debug.py  densities.py  embeddings.py  example.py  grammar.hs  graphs.py  inference.py  kernel.py  lazytrace.py  metrics.py  nnets.py  objectives.py  out.py  program.py  resamplers.py  sampler.py  stochastic.py  trace.hs  trace.py  trace_operators.py  traceable.py  types.py  utils.py
combinators/densities/: __init__.py  kernels.py
combinators/densities_bk/: __init__.py  kernels.py  nvi_densities.py
combinators/inference/: __init__.py  importance.py  inference.py  mcmc.py
combinators/kernel/: __init__.py  kernel.py  mh.py
combinators/model/: __init__.py  active.py  foldable.py  kernel.py  model.py
combinators/resampling/: strategies.py
combinators/tensor/: __init__.py  utils.py
combinators/trace/: utils.py
combinators/types/: combinator.py  kernel.py  model.py
combinators/v0/: extend.py  lazytrace.py  resampling.py  trace_operators.py
conf/: config.yaml  defaults.yaml
examples/ais/: ais_1d_gaussians.ipynb  ais_1d_gaussians.py  ais_1d_gaussians_no_combinators.py  image_density.ipynb  image_density.py  image_density_MH.ipynb
examples/bouncing_ball/: bouncing_ball.ipynb  bouncing_ball.py  bouncing_ball_export.ipynb  bouncing_ball_plots.py
examples/dynamical_ball/: dynamical_ball.ipynb  dynamical_ball.py  dynamical_ball_experiment.ipynb  (+4 more)
experiments/: startup.py
nix/: sources.json
proto/: LICENSE  Lib.hs  Main.hs  Makefile  README.org  cabal.project  default.nix  proto-combinators.cabal  release.nix  shell.nix
proto/nix/: defaults.nix  development.nix  sources.json
proto/nix/overlays/: llvm9.nix
tests/: __init__.py  test_adhoc_programs.py  test_annealing.py  test_annealing_experiment.py  test_annotation.py  test_apgs_playground.py  test_densities.py  test_inference.py  test_inference_v2.py  test_lazytrace.py  test_resamplers.py  test_trace.py  utils.py
(+84 files in other folders)
