cabal-version:  2.2
name:           proto-combinators
version:        0.1.0.0
synopsis:       prototype of combinator semantics in haskell
description:    Please see the README on GitHub at <https://github.com/stites/combinators#readme>
homepage:       https://github.com/stites/combinators#readme
bug-reports:    https://github.com/stites/combinators/issues
author:         Sam Stites
maintainer:     fnz@fgvgrf.vb (cipher:rot13)
copyright:      Copyright: (c) 2020 Sam Stites
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    ChangeLog.org

source-repository head
  type: git
  location: https://github.com/stites/combinators

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5
  other-modules: Paths_proto_combinators

common deps-datastructs
  build-depends:
      containers
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector

common deps-datastructs-fancy
  build-depends:
      free
    , fused-effects
    , fingertree

executable proto-combinators
  import: base
  main-is: Main.hs
  hs-source-dirs: .
